# smart-humanoid

./: .env.example  .gitignore  CLAUDE.md  config-helpers.ts  docusaurus.config.ts  jest.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  __init__.py  alembic.ini  conftest.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/api/: __init__.py  deps.py  middleware.py
backend/api/routes/: chat.py  health.py  sessions.py
backend/core/: __init__.py  config.py  connectivity.py  database.py  readiness.py
backend/models/: __init__.py  database.py  schemas.py
backend/scripts/: __init__.py  check_connectivity.py  check_vectors.py  index_content.py  setup_qdrant.py  test_qdrant_direct.py  test_rag.py  test_rag_debug.py  test_search.py  test_sync_in_async.py
backend/services/: __init__.py  agent.py  analytics.py  citation.py  embedding.py  persona.py  purge.py  rag.py  safety.py  vector_store.py
backend/tests/: __init__.py
backend/tests/contract/: __init__.py  test_openapi_schema.py
backend/tests/e2e/: __init__.py  test_page_content_e2e.py
backend/tests/integration/: __init__.py  test_chat_api.py  test_error_handling.py  test_health.py  test_page_content_context.py  test_sessions.py  test_vector_search.py  test_websocket.py
backend/tests/unit/: test_agent.py  test_analytics.py  test_citation_extractor.py  test_config.py  test_connectivity.py  test_database.py  test_database_models.py  test_embedding.py  test_persona_adapter.py  test_purge.py  test_rag_pipeline.py  test_safety_guardrails.py  test_schemas.py  test_vague_query_detection.py  test_vector_store.py
docs/: intro.md
docs/assets/: .gitkeep
docs/module-1-robotic-nervous-system/: _category_.json  chapter-1-physical-ai-foundations-builder.md  chapter-1-physical-ai-foundations-engineer.md  chapter-1-physical-ai-foundations-explorer.md  index.md  (+6 more)
(+162 files in other folders)
